fixed: operation stuck focused while switched from mouse to keyboard

--- a/media/styles.css
+++ b/media/styles.css
@@ -38,7 +38,6 @@ main {
 /*SCREEN*/
 #screen {
   grid-area: screen;
-  height: 100%;
   background: white;
   border-radius: 4px;
   border: 2px solid gray;
